Bug 471282 - When OutputConfigurationStore::generateConfig runs--even if it makes no scale changes--right-tiled windows are moved to be offscreen
Summary: When OutputConfigurationStore::generateConfig runs--even if it makes no scale...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
: 471078 471275 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-21 06:53 UTC by Nate Graham
Modified: 2023-07-25 19:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-06-21 06:53:12 UTC
STEPS TO REPRODUCE
1. Use Plasma 6 Wayland on a laptop with a high DPI screen that needs a scale factor
2. Open any windows and quick-tile them to the right side of the screen
3. Close laptop lid such that OutputConfigurationStore::generateConfig() runs, per Bug 470742
4. Close the lid
5. Wait a moment to make sure it's gone to sleep, and open the lid


OBSERVED RESULT
All right-tiled windows are relocated to be just off the right side of the screen


EXPECTED RESULT
Windows don't get moved


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Kernel Version: 6.3.6-200.fc38.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-10510U CPU @ 1.80GHz
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics


ADDITIONAL INFORMATION
Might not be purely a Plasma 6 issue, as there have been some scattered reports of windows getting moved offscreen under various circumstances in Plasma 5 as well.
Comment 1 Bug Janitor Service 2023-06-21 08:27:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4200
Comment 2 Nate Graham 2023-06-21 08:43:25 UTC
*** Bug 471275 has been marked as a duplicate of this bug. ***
Comment 3 Zamundaaa 2023-06-21 09:15:09 UTC
Git commit 480f857d2942fb9808e7a653aa54b2b44d1efc8d by Xaver Hugl.
Committed on 21/06/2023 at 09:05.
Pushed by zamundaaa into branch 'master'.

outputconfigurationstore: don't handle laptop lid closing yet

Interactions with KScreen cause settings to be reset to the default when the lid
gets closed, so handling lid closing in KWin needs to wait until KScreen no longer
writes configs

M  +1    -0    autotests/integration/outputchanges_test.cpp
M  +4    -0    src/outputconfigurationstore.cpp

https://invent.kde.org/plasma/kwin/-/commit/480f857d2942fb9808e7a653aa54b2b44d1efc8d
Comment 4 Nate Graham 2023-07-25 19:15:22 UTC
*** Bug 471078 has been marked as a duplicate of this bug. ***